================= Unreleased ==================
; Fixed ; Minor ; Compiler ; #5564
Using absoluteValue annotation to generate relativeQuantity attribute

; Fixed ; Minor ; Compiler ; #5563
Fixed bugs for start attribute generation in xml

; Fixed ; Minor ; Compiler ; #5560
Improved temporary counting leading to smaller generated c-functions

; Fixed ; Minor ; Compiler ; #5559
Fixed a problem with vectorized functions where the 
sizes of the dimensions where incorrectly handled.

; Fixed ; Minor ; Compiler ; #5557
Fixed dependency computation for dynamic derivatives, the FMU XML didn't list
the corresponding dynamic states as dependencies for the dynamic derivatives.

================= Stable-2018-02-09 ==================
; Change ; Minor ; Runtime; #5555
Added so that the internal solver is re-initialized if inputs are
changed in a co-simulation FMU.

; Change ; Minor ; Compiler ; #5549
Moved static variable declarations for generated temporaries to
generated struct in order to improve multithreading capabilities.

================= Stable-2018-01-24 ==================
; Change ; Minor ; PyFMI ; #5548
Deprecated get_log_file_name in favour of get_log_filename

; Change ; Minor ; MSL ; #5546
Patched MSL resources to take into account the NO_MUTEX define.

; Feature ; Minor ; PyFMI ; #5545
Implemented support for injecting custom logging functionality

; Change ; Minor ; Compiler ; #5542
Changed license for code generation templates to CPL

; Fixed ; Minor ; Compiler ; #5539
Changed how qualifiedname works for multidimensional arrays by adding 
 special case for InstArrayComponentDecl. 

; Feature ; Minor ; PyFMI ; #5537
Added the possibility to retrieve unit and display unit name for FMI2 
and also its value in the display unit.

================= Stable-2018-01-12 ==================
; Feature ; Major ; Compiler; #4797 
Full string support

; Fixed ; Minor ; Compiler ; #5527
Fixed representation of size expressions in function call types
